--- a/style.css
+++ b/style.css
@@ -64,13 +64,16 @@ img {
     color: #FFE6D5;
 }
 .header h1{
-    background-color: #AD0000;
+    background-color: #C8BCC7;
     padding: 10px;
     font-size: 60px;
     color: #2F3632;
     letter-spacing: 2px;
     margin-top: 20px;
     text-align: center;
+    border-style: none none none solid;
+    border-color: #CE1441;
+    border-left-width: 15px;
 }
 .row h1 {
     background-color: #272625;
@@ -86,7 +89,7 @@ img {
     padding: 10px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     position: fixed;
-    background-color: #AD0000;
+    background-color: #C8BCC7;
     font-family: Patua One;
     font-size: 20px;
 }
@@ -94,7 +97,7 @@ img {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #AD0000;
+    background-color: #C8BCC7;
 }
 .menu li {
     padding: 10px;
@@ -102,6 +105,7 @@ img {
     background-color: #434343;
     color: #FFE6D5;
     box-shadow: 1px 1px 3px rgba(0,0,0,0.12), 2px 2px 2px rgba(0,0,0,0.24);
+    cursor: pointer;
 }
 .menu li:hover {
     background-color: #585757;
@@ -327,6 +331,9 @@ img {
         display: none;
     }
     .col-1.col-s-1.person.flip.none.drynone{
+        display: none;
+    }
+    .col-1.col-s-1.person.flip.none2.drynone{
         display: none;
     }
     .col-3.col-s-6.person.flip.none.hpnone{
