--- a/style.css
+++ b/style.css
@@ -63,13 +63,37 @@ img {
     cursor: pointer;
     color: #FFE6D5;
 }
+.topbar{
+    overflow: hidden;
+    background-color: #272625;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+.topbar a div {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}  
+.topbar a div:hover {
+    background-color: #ddd;
+    color: black;
+}
+.topbar div.active {
+    background-color: #C8BCC7;
+    color: white;
+}
 .header h1{
     background-color: #C8BCC7;
     padding: 10px;
     font-size: 60px;
     color: #2F3632;
     letter-spacing: 2px;
-    margin-top: 20px;
+    margin-top: 49px;
     text-align: center;
     border-style: none none none solid;
     border-color: #CE1441;
@@ -77,10 +101,11 @@ img {
 }
 .row h1 {
     background-color: #272625;
-    padding: 10px;
+    padding: 20px;
+    padding-top: 40px;
     font-size: 50px;
     letter-spacing: 2px;
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
     font-family: Patua One;
     color: #FFE6D5;
@@ -109,6 +134,10 @@ img {
 }
 .menu li:hover {
     background-color: #585757;
+}
+.menu li.active {
+    background-color: #585757;
+    color: white;
 }
 @media screen and (max-width: 930px) {
     div.menu {
